# SSeqCpp

./: .clang-format  .gitignore  CMakeLists.txt  GenCptProj.py  GenCptProj_AdamsE2.py  LICENSE  README.md  build.sh  db_to_csv.sql
Adams/: AdamsCell.cpp  AdamsD2.cpp  AdamsExport.cpp  AdamsProd.cpp  AdamsRes.cpp  AdamsResExport.cpp  AdamsResProd.cpp  AdamsScheduler.cpp  AdamsUtilities.cpp  AdamsVerify.cpp  CMakeLists.txt  DrawE2.py  DrawSS.py  cells.cpp  complexes.cpp  gen_names.py  groebner_res.cpp  groebner_res.h  groebner_res_const.cpp  groebner_res_const.h  groebner_steenrod.cpp  groebner_steenrod.h  groebner_steenrod_const.h  main.cpp  main.h  notes.md  steenrod_sec.cpp  steenrod_sec.h
AdamsE2/: AdamsE2.cpp  AdamsE2Export.cpp  AdamsE2Prod.cpp  AdamsE2_vertical.cpp  CMakeLists.txt  DrawE2.py  DrawSS.py  gen_names.py  groebner_steenrod.cpp  groebner_steenrod.h  groebner_steenrod_const - Copy.cpp  groebner_steenrod_const.cpp  groebner_steenrod_const.h  groebner_steenrod_vertical.cpp  groebner_steenrod_vertical.h
AdamsR/: CMakeLists.txt  main.cpp  main.h  steenrodR.cpp  steenrodR.h
Adamsp/: CMakeLists.txt  main.cpp  main.h  steenrodp.cpp
HAX/: B9.cpp  B9.h  CMakeLists.txt  MayE2.cpp  MayE2.h  Reindex.cpp  X_basis.cpp  utilities2.cpp
MayE2/: B9.cpp  CMakeLists.txt  MayE2.cpp  MayE2.h  Reorder.cpp  d2.cpp
MayE4/: CMakeLists.txt  MayE4.cpp
archive/: AdamsE2(1).csv  AdamsE2.csv  AdamsE2.csv.db  AdamsE2_headerless.csv  AdamsE2_vertical.cpp  Chua d2.md  archive.cpp  archive.md  gen_names.ipynb  groebner_steenrod_vertical.h  myio.h  pigroebner.cpp  pigroebner.h  plot.py  steenrod_sec.cpp  steenrod_sec.h  thread_pool.h
docs/: CMakeLists.txt
include/algebras/: algebras.h  algebrasZ.h  benchmark.h  database.h  dbAdamsSS.h  dbalg.h  groebner.h  groebnerZ.h  groebner_steenrod.h  linalg.h  myexception.h  myhash.h  myio.h  myparser.h  steenrod.h  utility.h
scripts/: Adams.json  Adams_json.ipynb  Bruner-Module.ipynb  Draw.ipynb  DrawE2.py  DrawHomotopy.py  DrawSS.py  E2_gen_names.json  GenCptProj.py  commands.sh  db_to_csv.sh  db_to_csv.sql  debug.md  diagram_status.py  gen_names.ipynb  gen_names.json  gen_names.py  gen_tasks.ipynb  jobs.sh  jobsRP.sh  memo.excalidraw  output_latex.ipynb  output_latex.py  pi_gen_names.json  plot.py  plotlib.py  prod_mod.sh  res.sh  ss.json  status.py  tasks.json  tasks_new.json  tmp.ipynb  truncate.ipynb  update_ss_json.ipynb
src/: CMakeLists.txt  algebras.cpp  algebrasZ.cpp  benchmark.cpp  database.cpp  dbAdamsSS.cpp  dbalg.cpp  groebner.cpp  groebnerZ.cpp  groebner_steenrod.cpp  linalg.cpp  myio.cpp  myparser.cpp  steenrod.cpp  thread_pool.cpp  utility.cpp
ss/: CMakeLists.txt  SS.cpp  add_diff.cpp  add_ext.cpp  basis.cpp  basis_prod.cpp  category.cpp  cofseq.cpp  config.cpp  database_ss.cpp  deduce.cpp  diagram.cpp  differentials.txt  homotopy.cpp  htpy_def.cpp  loadsave.cpp  main.cpp  main.h  memo.excalidraw  migrate.cpp  mylog.cpp  mylog.h  naming.cpp  pigroebner.cpp  pigroebner.h  plot.cpp  ss.cpp  ss.json  staircase.cpp  table_prod.cpp  table_ss.cpp  todo.md  utility.cpp
tests/: CMakeLists.txt  benchmark.cpp  test.cpp  test_database.cpp  test_groebner.cpp  tmp.cpp
