add_executable(MayE2 MayE2.cpp Reorder.cpp d2.cpp MayE2.h)
if(MSVC)
    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /Zi")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_LINK_FLAGS_RELEASE} /DEBUG")
endif()
target_compile_features(MayE2 PRIVATE cxx_std_17)
target_include_directories(MayE2 PRIVATE ../include)
target_link_libraries(MayE2 PRIVATE algebras)

add_executable(B9 B9.cpp)
target_compile_features(B9 PRIVATE cxx_std_17)
target_include_directories(B9 PRIVATE ../include)
target_link_libraries(B9 PRIVATE algebras)
